fix(hypr): new layer rules syntax

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,13 +21,26 @@ windowrulev2 = float,title:^(waybar)
 windowrulev2 = noborder,title:^(waybar)
 
 # Layer rules
-layerrule = blur,waybar
-layerrule = blur,wofi
+layerrule {
+  name = layerrule-waybar
+  blur = on
+  match:namespace = waybar
+}
+
+layerrule {
+  name = layerrule-walker
+  blur = on
+  match:namespace = walker
+}
 
 # Keybinds
 source = ~/.config/hypr/keybinds.conf
 
 # Obsidian
-windowrulev2 = float,title:^(Obsidian)
+windowrule {
+  name = windowrule-2
+  float = on
+  match:title = ^(Obsidian)
+}
 
 #bind = SUPER, SUPER_L, overview:toggle
