--- a/gamemode/gamemode.ini
+++ b/gamemode/gamemode.ini
@@ -22,11 +22,11 @@ igpu_power_threshold=0.3
 ; GameMode can change the scheduler policy to SCHED_ISO on kernels which support it (currently
 ; not supported by upstream kernels). Can be set to "auto", "on" or "off". "auto" will enable
 ; with 4 or more CPU cores. "on" will always enable. Defaults to "off".
-softrealtime=off
+softrealtime=on
 
 ; GameMode can renice game processes. You can put any value between 0 and 20 here, the value
 ; will be negated and applied as a nice value (0 means no change). Defaults to 0.
-renice=0
+renice=10
 
 ; By default, GameMode adjusts the iopriority of clients to BE/0, you can put any value
 ; between 0 and 7 here (with 0 being highest priority), or one of the special values
@@ -66,7 +66,7 @@ gpu_device=0
 ; This corresponds to the desired GPUPowerMizerMode
 ; "Adaptive"=0 "Prefer Maximum Performance"=1 and "Auto"=2
 ; See NV_CTRL_GPU_POWER_MIZER_MODE and friends in https://github.com/NVIDIA/nvidia-settings/blob/master/src/libXNVCtrl/NVCtrl.h
-;nv_powermizer_mode=1
+nv_powermizer_mode=1
 
 ; These will modify the core and mem clocks of the highest perf state in the Nvidia PowerMizer
 ; They are measured as Mhz offsets from the baseline, 0 will reset values to default, -1 or unset will not modify values
@@ -95,7 +95,7 @@ gpu_device=0
 start=notify-send "Gamemode started"
 ;    /home/me/bin/stop_ethmining.sh
 
-end=notify-send "Gamdemode ended"
+end=notify-send "Gamemode ended"
 ;    /home/me/bin/start_ethmining.sh
 
 ; Timeout for scripts (seconds). Scripts will be killed if they do not complete within this time.
