refactor: clean up nighthawk hypr config

--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -1,19 +1,14 @@
 # Monitors
-# monitor=DP-1,highrr,0x0,1
-# monitor=HDMI-A-1,highres,-2160x-1100,1,transform,3
-# monitor=DP-2,preferred,0x-1440,1
 monitor=DP-2,highrr,0x0,1
-# monitor=HDMI-A-1,highres,-2160x-1100,1,transform,3
 monitor=HDMI-A-1,preferred,-2160x-1100,1,transform,3
 monitor=DP-1,highrr,0x-1440,1
-# monitor=FALLBACK,1920x1080@60,auto,1
 
 # Execs (Startup applications)
 exec-once=gammastep -l 39.962:-82.996
-# exec-once=sleep 5; /usr/lib/kdeconnectd
 exec-once=sleep 5; streamcontroller -b
+exec-once=sleep 5; firefox
 exec-once=sleep 5; obsidian --ozone-platform=wayland --ozone-platform-hint=auto --enable-features=UseOzonePlatform,WaylandWindowDecorations --disable-gpu
-exec-once=sleep 6; ghostty --title=claude-notes --command="/usr/bin/fish -c 'cd /home/tony/notes && /home/tony/.local/share/pnpm/claude'"
+# exec-once=sleep 6; ghostty --title=claude-notes --command="/usr/bin/fish -c 'cd /home/tony/notes && /home/tony/.local/share/pnpm/claude'"
 
 # Workspaces
 workspace=name:1, monitor:DP-2, persistent:true, default:true
@@ -24,11 +19,11 @@ workspace=name:right-monitor, monitor:HDMI-A-1, default:true, persistent:true
 workspace=name:top-monitor, monitor:DP-1, default:true, persistent:true
 
 # Notepad (special workspace: Obsidian 70% left, Claude Code 30% right)
-windowrulev2 = float, class:^(obsidian)$
-windowrulev2 = size 2580 2000, class:^(obsidian)$
-windowrulev2 = move 50 50, class:^(obsidian)$
-windowrulev2 = workspace special, class:^(obsidian)$
-windowrulev2 = opacity 0.95, class:^(obsidian)$
+# windowrulev2 = float, class:^(obsidian)$
+# windowrulev2 = size 2580 2000, class:^(obsidian)$
+# windowrulev2 = move 50 50, class:^(obsidian)$
+# windowrulev2 = workspace special, class:^(obsidian)$
+# windowrulev2 = opacity 0.95, class:^(obsidian)$
 
 windowrulev2 = float, title:^(claude-notes)$
 windowrulev2 = size 1120 2000, title:^(claude-notes)$
@@ -45,13 +40,6 @@ windowrulev2 = workspace top-monitor,title:^(Spotify)
 
 # Move Obsidian to Notepad Workspace
 # windowrulev2 = workspace notepad, class:^(obsidian)$
-
-# Minecraft
-# windowrulev2 = center,title:
-
-# Android Emulator
-# windowrulev2 = float,title:^(Emulator)
-# windowrulev2 = center,title:^(Emulator)
 
 # Waybar
 exec-once=sleep 1; dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && uwsm app -- waybar
