feat: nighthawk startup script to setup running applications automatically

--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -6,9 +6,9 @@ monitor=DP-1,highrr,0x-1440,1
 # Execs (Startup applications)
 exec-once=gammastep -l 39.962:-82.996
 exec-once=sleep 5; streamcontroller -b
-exec-once=sleep 5; firefox
-exec-once=sleep 5; obsidian --ozone-platform=wayland --ozone-platform-hint=auto --enable-features=UseOzonePlatform,WaylandWindowDecorations --disable-gpu
-# exec-once=sleep 6; ghostty --title=claude-notes --command="/usr/bin/fish -c 'cd /home/tony/notes && /home/tony/.local/share/pnpm/claude'"
+
+# Launch and tile all apps via layout script
+exec-once=sleep 3; /home/tony/.dotfiles/scripts/nighthawk-layout.sh
 
 # Workspaces
 workspace=name:1, monitor:DP-2, persistent:true, default:true
@@ -31,12 +31,18 @@ windowrulev2 = move 2670 50, title:^(claude-notes)$
 windowrulev2 = workspace special, title:^(claude-notes)$
 windowrulev2 = opacity 0.95, title:^(claude-notes)$
 
+# Startup workspace assignments (right monitor)
+windowrulev2 = workspace right-monitor silent, class:^(vesktop)$
+windowrulev2 = workspace right-monitor silent, class:^(FFPWA-01KBH7FDJN0SMRXM47M6HHR694)$
+windowrulev2 = workspace right-monitor silent, class:^(org.telegram.desktop)$
+
 # Move Google Meet to Vertical Monitor and Tile
 windowrulev2 = tile,title:^(Google Meet)
 windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
 
 # Move Spotify to Top Monitor
-windowrulev2 = workspace top-monitor,title:^(Spotify)
+windowrulev2 = workspace top-monitor silent,title:^(Spotify)
+windowrulev2 = workspace top-monitor silent,class:^(spotify)$
 
 # Move Obsidian to Notepad Workspace
 # windowrulev2 = workspace notepad, class:^(obsidian)$
